--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3266,11 +3266,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqtv\" id=\"4_146462936401\"><table><tr><th>AccountDescriptiveName</th><th>CampaignName</th><th>AdGroupName</th><th>Criteria</th><th>KeywordMatchType</th><th>Group</th><th>SubGroup</th></tr><tr><td>Volagratis Tratte Italia</td><td>voli Tratte Italia - Europa 3 Exact</td><td>Firenze - Bordeaux</td><td>voli Firenze Bordeaux</td><td>Exact</td><td>Click</td><td>Click - 00</td></tr><tr><td>Volagratis Tratte Italia</td><td>voli Tratte Italia - Italia 2 Exact</td><td>Reggio Calabria - Ancona</td><td>volo Reggio Calabria Ancona</td><td>Exact</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Europa 1</td><td>Bergamo - Francoforte</td><td>offerte Bergamo Francoforte</td><td>Phrase</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Italia Exact</td><td>Milano - Reggio Calabria</td><td>lowcost Malpensa Reggio Calabria</td><td>Exact</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Europa 1</td><td>Bergamo - Dublino</td><td>volo Orio Dublino</td><td>Phrase</td><td>Click</td><td>Click - 00</td></tr><tr><td>Volagratis Tratte Italia</td><td>voli Tratte Italia - Europa 3 Exact</td><td>Roma - Simferopol</td><td>Roma Simferopol Volo</td><td>Exact</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Italia Exact</td><td>Bari - Milano</td><td>volo last minute da Bari a Milano</td><td>Exact</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Destinazioni Europa 2008 - Exact</td><td>Oviedo Voli</td><td>aereo Oviedo</td><td>Exact</td><td>Impressions</td><td>Impressions - 00</td></tr><tr><td>Volagratis Tratte Italia</td><td>Easyjet Tratte Phrase</td><td>Easyjet Milano Amburgo</td><td>milano Amburgo easyjet</td><td>Phrase</td><td>Impressions</td><td>Impressions - 00</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Destinazioni Europa 2008 - Exact</td><td>Londra Stansted Voli</td><td>volo Stansted</td><td>Exact</td><td>Click</td><td>Click - 02</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Destinazioni Europa 2008 - Phrase</td><td>Berlino Voli</td><td>voli Berlino</td><td>Phrase</td><td>Click</td><td>Click - 01</td></tr><tr><td>Volagratis Tratte Italia</td><td>voli Tratte Italia - Europa 3</td><td>Bologna - Amsterdam</td><td>vola Bologna Amsterdam</td><td>Phrase</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Mondo - Italia 1</td><td>Bucarest - Reggio Calabria</td><td>volo Bucarest Reggio Calabria</td><td>Phrase</td><td>Click</td><td>Click - 02</td></tr><tr><td>Account Primario Volagratis</td><td>Città</td><td>volo città</td><td>volo Akureyri</td><td>Exact</td><td>Impressions</td><td>Impressions - 00</td></tr><tr><td>Volagratis Tratte Italia</td><td>voli Tratte Italia - Europa 3</td><td>Pisa - Belgio</td><td>volo Pisa Belgio</td><td>Phrase</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Compagnie aeree Exact</td><td>Ib</td><td>volo Ib</td><td>Exact</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Italia Exact</td><td>Roma - Milano</td><td>voli lowcost Roma Milano</td><td>Exact</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Italia</td><td>Catania - Bologna</td><td>voli da cta a blq</td><td>Phrase</td><td>Impressions</td><td>Impressions - 00</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Mondo 2 - Exact</td><td>Napoli - San Francisco</td><td>offerte Napoli San Francisco</td><td>Exact</td><td>Impressions</td><td>Impressions - 00</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Mondo 3 - Exact</td><td>Palermo - Toronto</td><td>Palermo Toronto Lowcost</td><td>Exact</td><td>Click</td><td>Click - 02</td></tr><tr><td>Volagratis Tratte Italia</td><td>voli Tratte Italia - Italia 2</td><td>Treviso - Brindisi</td><td>Treviso Brindisi Volo</td><td>Phrase</td><td>Converter</td><td>Converter - Occasional</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Destinazioni Italia 2008 - Phrase</td><td>Cagliari</td><td>offerta voli Cagliari</td><td>Phrase</td><td>Click</td><td>Click - 01</td></tr><tr><td>Volagratis</td><td>Voli Destinazioni Mondo - Exact</td><td>Vilnius Voli</td><td>voli economici Vilnius</td><td>Exact</td><td>Impressions</td><td>Impressions - 01</td></tr><tr><td>Volagratis Tratte Italia</td><td>voli Tratte Italia - Mondo 9</td><td>Roma - Tunisi</td><td>volo economico da Roma a Tunisi</td><td>Phrase</td><td>Click</td><td>Click - 01</td></tr><tr><td>Volagratis Tratte Italia</td><td>Voli Nazioni - Exact</td><td>Argentina</td><td>volo in argentina</td><td>Exact</td><td>Click</td><td>Click - 01</td></tr></table></div>\n",
+       "    <br />(rows: 0, google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_GROUPS)<br />\n",
+       "    <script>\n",
+       "      require(['extensions/charting', 'element!4_146462936401', 'style!/static/extensions/charting.css'],\n",
+       "        function(charts, dom) {\n",
+       "          charts.render(dom,\n",
+       "            {\n",
+       "              chartStyle:\"table\",\n",
+       "              dataName:\"2\",\n",
+       "              fields:\"AccountDescriptiveName,CampaignName,AdGroupName,Criteria,KeywordMatchType,Group,SubGroup\",\n",
+       "              totalRows:0,\n",
+       "              rowsPerPage:25,\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"voli Tratte Italia - Europa 3 Exact\"}, {\"v\": \"Firenze - Bordeaux\"}, {\"v\": \"voli Firenze Bordeaux\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 00\"}]}, {\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"voli Tratte Italia - Italia 2 Exact\"}, {\"v\": \"Reggio Calabria - Ancona\"}, {\"v\": \"volo Reggio Calabria Ancona\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Europa 1\"}, {\"v\": \"Bergamo - Francoforte\"}, {\"v\": \"offerte Bergamo Francoforte\"}, {\"v\": \"Phrase\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Italia Exact\"}, {\"v\": \"Milano - Reggio Calabria\"}, {\"v\": \"lowcost Malpensa Reggio Calabria\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Europa 1\"}, {\"v\": \"Bergamo - Dublino\"}, {\"v\": \"volo Orio Dublino\"}, {\"v\": \"Phrase\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 00\"}]}, {\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"voli Tratte Italia - Europa 3 Exact\"}, {\"v\": \"Roma - Simferopol\"}, {\"v\": \"Roma Simferopol Volo\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Italia Exact\"}, {\"v\": \"Bari - Milano\"}, {\"v\": \"volo last minute da Bari a Milano\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Destinazioni Europa 2008 - Exact\"}, {\"v\": \"Oviedo Voli\"}, {\"v\": \"aereo Oviedo\"}, {\"v\": \"Exact\"}, {\"v\": \"Impressions\"}, {\"v\": \"Impressions - 00\"}]}, {\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"Easyjet Tratte Phrase\"}, {\"v\": \"Easyjet Milano Amburgo\"}, {\"v\": \"milano Amburgo easyjet\"}, {\"v\": \"Phrase\"}, {\"v\": \"Impressions\"}, {\"v\": \"Impressions - 00\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Destinazioni Europa 2008 - Exact\"}, {\"v\": \"Londra Stansted Voli\"}, {\"v\": \"volo Stansted\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 02\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Destinazioni Europa 2008 - Phrase\"}, {\"v\": \"Berlino Voli\"}, {\"v\": \"voli Berlino\"}, {\"v\": \"Phrase\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"voli Tratte Italia - Europa 3\"}, {\"v\": \"Bologna - Amsterdam\"}, {\"v\": \"vola Bologna Amsterdam\"}, {\"v\": \"Phrase\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Mondo - Italia 1\"}, {\"v\": \"Bucarest - Reggio Calabria\"}, {\"v\": \"volo Bucarest Reggio Calabria\"}, {\"v\": \"Phrase\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 02\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Citt\\u00e0\"}, {\"v\": \"volo citt\\u00e0\"}, {\"v\": \"volo Akureyri\"}, {\"v\": \"Exact\"}, {\"v\": \"Impressions\"}, {\"v\": \"Impressions - 00\"}]}, {\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"voli Tratte Italia - Europa 3\"}, {\"v\": \"Pisa - Belgio\"}, {\"v\": \"volo Pisa Belgio\"}, {\"v\": \"Phrase\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Compagnie aeree Exact\"}, {\"v\": \"Ib\"}, {\"v\": \"volo Ib\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Italia Exact\"}, {\"v\": \"Roma - Milano\"}, {\"v\": \"voli lowcost Roma Milano\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Italia\"}, {\"v\": \"Catania - Bologna\"}, {\"v\": \"voli da cta a blq\"}, {\"v\": \"Phrase\"}, {\"v\": \"Impressions\"}, {\"v\": \"Impressions - 00\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Mondo 2 - Exact\"}, {\"v\": \"Napoli - San Francisco\"}, {\"v\": \"offerte Napoli San Francisco\"}, {\"v\": \"Exact\"}, {\"v\": \"Impressions\"}, {\"v\": \"Impressions - 00\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Mondo 3 - Exact\"}, {\"v\": \"Palermo - Toronto\"}, {\"v\": \"Palermo Toronto Lowcost\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 02\"}]}, {\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"voli Tratte Italia - Italia 2\"}, {\"v\": \"Treviso - Brindisi\"}, {\"v\": \"Treviso Brindisi Volo\"}, {\"v\": \"Phrase\"}, {\"v\": \"Converter\"}, {\"v\": \"Converter - Occasional\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Destinazioni Italia 2008 - Phrase\"}, {\"v\": \"Cagliari\"}, {\"v\": \"offerta voli Cagliari\"}, {\"v\": \"Phrase\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Volagratis\"}, {\"v\": \"Voli Destinazioni Mondo - Exact\"}, {\"v\": \"Vilnius Voli\"}, {\"v\": \"voli economici Vilnius\"}, {\"v\": \"Exact\"}, {\"v\": \"Impressions\"}, {\"v\": \"Impressions - 01\"}]}, {\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"voli Tratte Italia - Mondo 9\"}, {\"v\": \"Roma - Tunisi\"}, {\"v\": \"volo economico da Roma a Tunisi\"}, {\"v\": \"Phrase\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"Voli Nazioni - Exact\"}, {\"v\": \"Argentina\"}, {\"v\": \"volo in argentina\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}], \"cols\": [{\"type\": \"string\", \"id\": \"AccountDescriptiveName\", \"label\": \"AccountDescriptiveName\"}, {\"type\": \"string\", \"id\": \"CampaignName\", \"label\": \"CampaignName\"}, {\"type\": \"string\", \"id\": \"AdGroupName\", \"label\": \"AdGroupName\"}, {\"type\": \"string\", \"id\": \"Criteria\", \"label\": \"Criteria\"}, {\"type\": \"string\", \"id\": \"KeywordMatchType\", \"label\": \"KeywordMatchType\"}, {\"type\": \"string\", \"id\": \"Group\", \"label\": \"Group\"}, {\"type\": \"string\", \"id\": \"SubGroup\", \"label\": \"SubGroup\"}]});\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "Table google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_GROUPS"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "demo_context = gcp.Context.default()\n",
     "ddm_context = gcp.Context(project_id='google.com:ddm-connectors-demo',\n",
@@ -3300,18 +3331,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqtv\" id=\"5_146462944060\"><table><tr><th>AccountDescriptiveName</th><th>CampaignName</th><th>AdGroupName</th><th>Criteria</th><th>KeywordMatchType</th><th>Group</th><th>SubGroup</th></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Italia Exact</td><td>Milano - Reggio Calabria</td><td>lowcost Malpensa Reggio Calabria</td><td>Exact</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Compagnie aeree Broad</td><td>Blueair</td><td>blueai</td><td>Broad</td><td>Click</td><td>Click - 00</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Destinazioni Europa 2008 - Exact</td><td>Londra Stansted Voli</td><td>volo Stansted</td><td>Exact</td><td>Click</td><td>Click - 02</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Italia Exact</td><td>Catania - Verona</td><td>biglietti aerei economici da Catania a Verona</td><td>Exact</td><td>Click</td><td>Click - 02</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Mondo - Italia 5</td><td>New York - Palermo</td><td>aerei da New York a Palermo</td><td>Phrase</td><td>Click</td><td>Click - 01</td></tr></table></div>\n",
+       "    <br />(rows: 5, time: 2.7s,     0B processed, job: job_68fDYaWEXIbVUHHv7dsfxRbTQmo)<br />\n",
+       "    <script>\n",
+       "      require(['extensions/charting', 'element!5_146462944060', 'style!/static/extensions/charting.css'],\n",
+       "        function(charts, dom) {\n",
+       "          charts.render(dom,\n",
+       "            {\n",
+       "              chartStyle:\"table\",\n",
+       "              dataName:\"3\",\n",
+       "              fields:\"AccountDescriptiveName,CampaignName,AdGroupName,Criteria,KeywordMatchType,Group,SubGroup\",\n",
+       "              totalRows:5,\n",
+       "              rowsPerPage:25,\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Italia Exact\"}, {\"v\": \"Milano - Reggio Calabria\"}, {\"v\": \"lowcost Malpensa Reggio Calabria\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Compagnie aeree Broad\"}, {\"v\": \"Blueair\"}, {\"v\": \"blueai\"}, {\"v\": \"Broad\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 00\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Destinazioni Europa 2008 - Exact\"}, {\"v\": \"Londra Stansted Voli\"}, {\"v\": \"volo Stansted\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 02\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Italia Exact\"}, {\"v\": \"Catania - Verona\"}, {\"v\": \"biglietti aerei economici da Catania a Verona\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 02\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Mondo - Italia 5\"}, {\"v\": \"New York - Palermo\"}, {\"v\": \"aerei da New York a Palermo\"}, {\"v\": \"Phrase\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}], \"cols\": [{\"type\": \"string\", \"id\": \"AccountDescriptiveName\", \"label\": \"AccountDescriptiveName\"}, {\"type\": \"string\", \"id\": \"CampaignName\", \"label\": \"CampaignName\"}, {\"type\": \"string\", \"id\": \"AdGroupName\", \"label\": \"AdGroupName\"}, {\"type\": \"string\", \"id\": \"Criteria\", \"label\": \"Criteria\"}, {\"type\": \"string\", \"id\": \"KeywordMatchType\", \"label\": \"KeywordMatchType\"}, {\"type\": \"string\", \"id\": \"Group\", \"label\": \"Group\"}, {\"type\": \"string\", \"id\": \"SubGroup\", \"label\": \"SubGroup\"}]});\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "QueryResultsTable job_68fDYaWEXIbVUHHv7dsfxRbTQmo"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%bigquery sample --table google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_GROUPS --count 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
