--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3588,12 +3588,141 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>AllConversions</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Click - 00</th>\n",
+       "      <td>2817206</td>\n",
+       "      <td>217249</td>\n",
+       "      <td>79096.22</td>\n",
+       "      <td>1959.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Click - 01</th>\n",
+       "      <td>5044557</td>\n",
+       "      <td>604370</td>\n",
+       "      <td>220508.07</td>\n",
+       "      <td>5667.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Click - 02</th>\n",
+       "      <td>348705</td>\n",
+       "      <td>72501</td>\n",
+       "      <td>28872.17</td>\n",
+       "      <td>725.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - High</th>\n",
+       "      <td>6718193</td>\n",
+       "      <td>2111737</td>\n",
+       "      <td>377484.74</td>\n",
+       "      <td>59137.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <td>3255160</td>\n",
+       "      <td>471607</td>\n",
+       "      <td>222212.27</td>\n",
+       "      <td>7832.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Mid</th>\n",
+       "      <td>3185257</td>\n",
+       "      <td>422653</td>\n",
+       "      <td>216490.53</td>\n",
+       "      <td>8157.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Occasional</th>\n",
+       "      <td>5619118</td>\n",
+       "      <td>782999</td>\n",
+       "      <td>294839.32</td>\n",
+       "      <td>10449.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Impressions - 00</th>\n",
+       "      <td>132483</td>\n",
+       "      <td>7126</td>\n",
+       "      <td>3074.97</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Impressions - 01</th>\n",
+       "      <td>134622</td>\n",
+       "      <td>12745</td>\n",
+       "      <td>6624.81</td>\n",
+       "      <td>129.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Impressions - 02</th>\n",
+       "      <td>15896</td>\n",
+       "      <td>4464</td>\n",
+       "      <td>2433.85</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Impressions   Clicks    CostEUR  AllConversions\n",
+       "SubGroup                                                               \n",
+       "Click - 00                  2817206   217249   79096.22          1959.0\n",
+       "Click - 01                  5044557   604370  220508.07          5667.0\n",
+       "Click - 02                   348705    72501   28872.17           725.0\n",
+       "Converter - High            6718193  2111737  377484.74         59137.0\n",
+       "Converter - Low             3255160   471607  222212.27          7832.0\n",
+       "Converter - Mid             3185257   422653  216490.53          8157.0\n",
+       "Converter - Occasional      5619118   782999  294839.32         10449.0\n",
+       "Impressions - 00             132483     7126    3074.97            70.0\n",
+       "Impressions - 01             134622    12745    6624.81           129.0\n",
+       "Impressions - 02              15896     4464    2433.85            46.0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeseries_post.groupby(by=['SubGroup'])[['Impressions','Clicks','CostEUR','AllConversions']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ti"
+   ]
   }
  ],
  "metadata": {
