--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3715,14 +3715,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>AllConversions</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Click - 00</th>\n",
+       "      <td>3793084</td>\n",
+       "      <td>302856</td>\n",
+       "      <td>101342.44</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Click - 01</th>\n",
+       "      <td>7228693</td>\n",
+       "      <td>928206</td>\n",
+       "      <td>310570.12</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Click - 02</th>\n",
+       "      <td>497863</td>\n",
+       "      <td>102194</td>\n",
+       "      <td>39288.87</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - High</th>\n",
+       "      <td>7575124</td>\n",
+       "      <td>2088736</td>\n",
+       "      <td>361706.76</td>\n",
+       "      <td>59781.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <td>3322455</td>\n",
+       "      <td>460839</td>\n",
+       "      <td>206131.14</td>\n",
+       "      <td>8408.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Mid</th>\n",
+       "      <td>3900747</td>\n",
+       "      <td>446947</td>\n",
+       "      <td>209673.13</td>\n",
+       "      <td>8273.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Occasional</th>\n",
+       "      <td>5469816</td>\n",
+       "      <td>719537</td>\n",
+       "      <td>245584.84</td>\n",
+       "      <td>14586.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Impressions - 00</th>\n",
+       "      <td>181436</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Impressions - 01</th>\n",
+       "      <td>194135</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Impressions - 02</th>\n",
+       "      <td>23633</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Impressions   Clicks    CostEUR  AllConversions\n",
+       "SubGroup                                                               \n",
+       "Click - 00                  3793084   302856  101342.44             0.0\n",
+       "Click - 01                  7228693   928206  310570.12             0.0\n",
+       "Click - 02                   497863   102194   39288.87             0.0\n",
+       "Converter - High            7575124  2088736  361706.76         59781.0\n",
+       "Converter - Low             3322455   460839  206131.14          8408.0\n",
+       "Converter - Mid             3900747   446947  209673.13          8273.0\n",
+       "Converter - Occasional      5469816   719537  245584.84         14586.0\n",
+       "Impressions - 00             181436        0       0.00             0.0\n",
+       "Impressions - 01             194135        0       0.00             0.0\n",
+       "Impressions - 02              23633        0       0.00             0.0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeseries.groupby(by=['SubGroup'])[['Impressions','Clicks','CostEUR','AllConversions']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "ti"
-   ]
+   "source": []
   }
  ],
  "metadata": {
