--- a/datalab/Untitled Notebook1.ipynb
+++ b/datalab/Untitled Notebook1.ipynb
@@ -1016,6 +1016,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 error=39158.3606295\n",
+      "1000 error=11164.4260205\n",
+      "2000 error=9102.97461212\n",
+      "3000 error=8214.15153\n",
+      "4000 error=7553.7914218\n",
+      "5000 error=7372.45471923\n",
+      "6000 error=7338.15121581\n",
+      "7000 error=7332.71592174\n",
+      "8000 error=7331.59512789\n",
+      "9000 error=7331.31354114\n",
+      "Model written to /tmp/trained_model-10000\n",
+      "testerror=7016.84655409\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCALE_NUM_TRIPS = 100000\n",
+    "trainsize = int(len(shuffled['numtrips']) * 0.8)\n",
+    "testsize = len(shuffled['numtrips']) - trainsize\n",
+    "npredictors = len(predictors.columns)\n",
+    "noutputs = 1\n",
+    "nhidden = 5\n",
+    "numiter = 10000\n",
+    "modelfile = '/tmp/trained_model'\n",
+    "with tf.Session() as sess:\n",
+    "  feature_data = tf.placeholder(\"float\", [None, npredictors])\n",
+    "  target_data = tf.placeholder(\"float\", [None, noutputs])\n",
+    "  weights1 = tf.Variable(tf.truncated_normal([npredictors, nhidden], stddev=0.01))\n",
+    "  weights2 = tf.Variable(tf.truncated_normal([nhidden, noutputs], stddev=0.01))\n",
+    "  biases1 = tf.Variable(tf.ones([nhidden]))\n",
+    "  biases2 = tf.Variable(tf.ones([noutputs]))\n",
+    "  model = (tf.matmul(tf.nn.relu(tf.matmul(feature_data, weights1) + biases1), weights2) + biases2) * SCALE_NUM_TRIPS\n",
+    "  cost = tf.nn.l2_loss(model - target_data)\n",
+    "  training_step = tf.train.AdamOptimizer(learning_rate=0.0001).minimize(cost)\n",
+    "  init = tf.initialize_all_variables()\n",
+    "  sess.run(init)\n",
+    "\n",
+    "  saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
+    "  for iter in xrange(0, numiter):\n",
+    "    sess.run(training_step, feed_dict = {\n",
+    "        feature_data : predictors[:trainsize].values,\n",
+    "        target_data : targets[:trainsize].values.reshape(trainsize, noutputs)\n",
+    "      })\n",
+    "    \n",
+    "    if iter%1000 == 0:\n",
+    "      print '{0} error={1}'.format(iter, np.sqrt(cost.eval(feed_dict = {\n",
+    "          feature_data : predictors[:trainsize].values,\n",
+    "          target_data : targets[:trainsize].values.reshape(trainsize, noutputs)\n",
+    "      }) / trainsize))\n",
+    "    \n",
+    "  filename = saver.save(sess, modelfile, global_step=numiter)\n",
+    "  print 'Model written to {0}'.format(filename)\n",
+    "\n",
+    "  print 'testerror={0}'.format(np.sqrt(cost.eval(feed_dict = {\n",
+    "          feature_data : predictors[trainsize:].values,\n",
+    "          target_data : targets[trainsize:].values.reshape(testsize, noutputs)\n",
+    "      }) / testsize))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 29834.46679688]\n",
+      " [ 49593.78125   ]\n",
+      " [ 38941.890625  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = pd.DataFrame.from_dict(data = \n",
+    "                               {'dayofweek' : [4, 5, 6],\n",
+    "                                'mintemp' : [50, 36, 54],\n",
+    "                                'maxtemp' : [80, 40, 75],\n",
+    "                                'rain' : [0, 0.8, 0.3]})\n",
+    "with tf.Session() as sess:\n",
+    "    filename = modelfile + '-' + str(numiter)\n",
+    "    saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
+    "    saver.restore(sess, filename)\n",
+    "    feature_data = tf.placeholder(\"float\", [None, npredictors])\n",
+    "    predict_operation = (tf.matmul(tf.nn.relu(tf.matmul(feature_data, weights1) + biases1), weights2) + biases2) * SCALE_NUM_TRIPS\n",
+    "    predicted = sess.run(predict_operation, feed_dict = {\n",
+    "        feature_data : input.values\n",
+    "      })\n",
+    "    print predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
