--- a/datalab/Untitled Notebook1.ipynb
+++ b/datalab/Untitled Notebook1.ipynb
@@ -1121,6 +1121,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 30313.38476562]\n",
+      " [ 49429.44140625]\n",
+      " [ 40985.484375  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = pd.DataFrame.from_dict(data = \n",
+    "                               {'dayofweek' : [4, 5, 6],\n",
+    "                                'mintemp' : [45, 40, 58],\n",
+    "                                'maxtemp' : [80, 40, 75],\n",
+    "                                'rain' : [1, 1, 1]})\n",
+    "with tf.Session() as sess:\n",
+    "    filename = modelfile + '-' + str(numiter)\n",
+    "    saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
+    "    saver.restore(sess, filename)\n",
+    "    feature_data = tf.placeholder(\"float\", [None, npredictors])\n",
+    "    predict_operation = (tf.matmul(tf.nn.relu(tf.matmul(feature_data, weights1) + biases1), weights2) + biases2) * SCALE_NUM_TRIPS\n",
+    "    predicted = sess.run(predict_operation, feed_dict = {\n",
+    "        feature_data : input.values\n",
+    "      })\n",
+    "    print predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
