--- a/datalab/Traffic prediction in NY.ipynb
+++ b/datalab/Traffic prediction in NY.ipynb
@@ -156,6 +156,234 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'targets' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-5eb502a753d7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     27\u001b[0m     sess.run(training_step, feed_dict = {\n\u001b[0;32m     28\u001b[0m         \u001b[0mfeature_data\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mpredictors\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mtrainsize\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m         \u001b[0mtarget_data\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mtargets\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mtrainsize\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrainsize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnoutputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m       })\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'targets' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "SCALE_NUM_TRIPS = 100000\n",
+    "trainsize = int(len(shuffled['numtrips']) * 0.8)\n",
+    "testsize = len(shuffled['numtrips']) - trainsize\n",
+    "npredictors = len(predictors.columns)\n",
+    "noutputs = 1\n",
+    "nhidden = 5\n",
+    "numiter = 10000\n",
+    "modelfile = '/tmp/trained_model'\n",
+    "with tf.Session() as sess:\n",
+    "  feature_data = tf.placeholder(\"float\", [None, npredictors])\n",
+    "  target_data = tf.placeholder(\"float\", [None, noutputs])\n",
+    "  weights1 = tf.Variable(tf.truncated_normal([npredictors, nhidden], stddev=0.01))\n",
+    "  weights2 = tf.Variable(tf.truncated_normal([nhidden, noutputs], stddev=0.01))\n",
+    "  biases1 = tf.Variable(tf.ones([nhidden]))\n",
+    "  biases2 = tf.Variable(tf.ones([noutputs]))\n",
+    "  model = (tf.matmul(tf.nn.relu(tf.matmul(feature_data, weights1) + biases1), weights2) + biases2) * SCALE_NUM_TRIPS\n",
+    "  cost = tf.nn.l2_loss(model - target_data)\n",
+    "  training_step = tf.train.AdamOptimizer(learning_rate=0.0001).minimize(cost)\n",
+    "  init = tf.initialize_all_variables()\n",
+    "  sess.run(init)\n",
+    "\n",
+    "  saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
+    "  for iter in xrange(0, numiter):\n",
+    "    sess.run(training_step, feed_dict = {\n",
+    "        feature_data : predictors[:trainsize].values,\n",
+    "        target_data : targets[:trainsize].values.reshape(trainsize, noutputs)\n",
+    "      })\n",
+    "    \n",
+    "    if iter%1000 == 0:\n",
+    "      print '{0} error={1}'.format(iter, np.sqrt(cost.eval(feed_dict = {\n",
+    "          feature_data : predictors[:trainsize].values,\n",
+    "          target_data : targets[:trainsize].values.reshape(trainsize, noutputs)\n",
+    "      }) / trainsize))\n",
+    "    \n",
+    "  filename = saver.save(sess, modelfile, global_step=numiter)\n",
+    "  print 'Model written to {0}'.format(filename)\n",
+    "\n",
+    "  print 'testerror={0}'.format(np.sqrt(cost.eval(feed_dict = {\n",
+    "          feature_data : predictors[trainsize:].values,\n",
+    "          target_data : targets[trainsize:].values.reshape(testsize, noutputs)\n",
+    "      }) / testsize))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "shuffled = data2.sample(frac=1)\n",
+    "# It would be a good idea, if we had more data, to treat the days as categorical variables\n",
+    "# with the small amount of data, we have though, the model tends to overfit\n",
+    "#predictors = shuffled.iloc[:,2:5]\n",
+    "#for day in xrange(1,8):\n",
+    "#  matching = shuffled['dayofweek'] == day\n",
+    "#  predictors.loc[matching, 'day_' + str(day)] = 1\n",
+    "#  predictors.loc[~matching, 'day_' + str(day)] = 0\n",
+    "predictors = shuffled.iloc[:,1:5]\n",
+    "targets = shuffled.iloc[:,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 error=33644.9991377\n",
+      "1000 error=10428.5075484\n",
+      "2000 error=8526.19276167\n",
+      "3000 error=7837.74271942\n",
+      "4000 error=7464.37864463\n",
+      "5000 error=7401.79628087\n",
+      "6000 error=7400.27909218\n",
+      "7000 error=7400.27718797\n",
+      "8000 error=7400.27718797\n",
+      "9000 error=7400.27655323\n",
+      "Model written to /tmp/trained_model-10000\n",
+      "testerror=7847.05611968\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCALE_NUM_TRIPS = 100000\n",
+    "trainsize = int(len(shuffled['numtrips']) * 0.8)\n",
+    "testsize = len(shuffled['numtrips']) - trainsize\n",
+    "npredictors = len(predictors.columns)\n",
+    "noutputs = 1\n",
+    "nhidden = 5\n",
+    "numiter = 10000\n",
+    "modelfile = '/tmp/trained_model'\n",
+    "with tf.Session() as sess:\n",
+    "  feature_data = tf.placeholder(\"float\", [None, npredictors])\n",
+    "  target_data = tf.placeholder(\"float\", [None, noutputs])\n",
+    "  weights1 = tf.Variable(tf.truncated_normal([npredictors, nhidden], stddev=0.01))\n",
+    "  weights2 = tf.Variable(tf.truncated_normal([nhidden, noutputs], stddev=0.01))\n",
+    "  biases1 = tf.Variable(tf.ones([nhidden]))\n",
+    "  biases2 = tf.Variable(tf.ones([noutputs]))\n",
+    "  model = (tf.matmul(tf.nn.relu(tf.matmul(feature_data, weights1) + biases1), weights2) + biases2) * SCALE_NUM_TRIPS\n",
+    "  cost = tf.nn.l2_loss(model - target_data)\n",
+    "  training_step = tf.train.AdamOptimizer(learning_rate=0.0001).minimize(cost)\n",
+    "  init = tf.initialize_all_variables()\n",
+    "  sess.run(init)\n",
+    "\n",
+    "  saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
+    "  for iter in xrange(0, numiter):\n",
+    "    sess.run(training_step, feed_dict = {\n",
+    "        feature_data : predictors[:trainsize].values,\n",
+    "        target_data : targets[:trainsize].values.reshape(trainsize, noutputs)\n",
+    "      })\n",
+    "    \n",
+    "    if iter%1000 == 0:\n",
+    "      print '{0} error={1}'.format(iter, np.sqrt(cost.eval(feed_dict = {\n",
+    "          feature_data : predictors[:trainsize].values,\n",
+    "          target_data : targets[:trainsize].values.reshape(trainsize, noutputs)\n",
+    "      }) / trainsize))\n",
+    "    \n",
+    "  filename = saver.save(sess, modelfile, global_step=numiter)\n",
+    "  print 'Model written to {0}'.format(filename)\n",
+    "\n",
+    "  print 'testerror={0}'.format(np.sqrt(cost.eval(feed_dict = {\n",
+    "          feature_data : predictors[trainsize:].values,\n",
+    "          target_data : targets[trainsize:].values.reshape(testsize, noutputs)\n",
+    "      }) / testsize))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 error=38276.2433903\n",
+      "1000 error=10387.3417956\n",
+      "2000 error=8468.2642698\n",
+      "3000 error=7658.09444763\n",
+      "4000 error=7228.71923636\n",
+      "5000 error=7151.70493819\n",
+      "6000 error=7138.88187992\n",
+      "7000 error=7136.92049849\n",
+      "8000 error=7136.44759365\n",
+      "9000 error=7136.07833091\n",
+      "Model written to /tmp/trained_model-10000\n",
+      "testerror=7828.49590105\n"
+     ]
+    }
+   ],
+   "source": [
+    "SCALE_NUM_TRIPS = 100000\n",
+    "trainsize = int(len(shuffled['numtrips']) * 0.8)\n",
+    "testsize = len(shuffled['numtrips']) - trainsize\n",
+    "npredictors = len(predictors.columns)\n",
+    "noutputs = 1\n",
+    "nhidden = 5\n",
+    "numiter = 10000\n",
+    "modelfile = '/tmp/trained_model'\n",
+    "with tf.Session() as sess:\n",
+    "  feature_data = tf.placeholder(\"float\", [None, npredictors])\n",
+    "  target_data = tf.placeholder(\"float\", [None, noutputs])\n",
+    "  weights1 = tf.Variable(tf.truncated_normal([npredictors, nhidden], stddev=0.01))\n",
+    "  weights2 = tf.Variable(tf.truncated_normal([nhidden, noutputs], stddev=0.01))\n",
+    "  biases1 = tf.Variable(tf.ones([nhidden]))\n",
+    "  biases2 = tf.Variable(tf.ones([noutputs]))\n",
+    "  model = (tf.matmul(tf.nn.relu(tf.matmul(feature_data, weights1) + biases1), weights2) + biases2) * SCALE_NUM_TRIPS\n",
+    "  cost = tf.nn.l2_loss(model - target_data)\n",
+    "  training_step = tf.train.AdamOptimizer(learning_rate=0.0001).minimize(cost)\n",
+    "  init = tf.initialize_all_variables()\n",
+    "  sess.run(init)\n",
+    "\n",
+    "  saver = tf.train.Saver({'weights1' : weights1, 'biases1' : biases1, 'weights2' : weights2, 'biases2' : biases2})\n",
+    "  for iter in xrange(0, numiter):\n",
+    "    sess.run(training_step, feed_dict = {\n",
+    "        feature_data : predictors[:trainsize].values,\n",
+    "        target_data : targets[:trainsize].values.reshape(trainsize, noutputs)\n",
+    "      })\n",
+    "    \n",
+    "    if iter%1000 == 0:\n",
+    "      print '{0} error={1}'.format(iter, np.sqrt(cost.eval(feed_dict = {\n",
+    "          feature_data : predictors[:trainsize].values,\n",
+    "          target_data : targets[:trainsize].values.reshape(trainsize, noutputs)\n",
+    "      }) / trainsize))\n",
+    "    \n",
+    "  filename = saver.save(sess, modelfile, global_step=numiter)\n",
+    "  print 'Model written to {0}'.format(filename)\n",
+    "\n",
+    "  print 'testerror={0}'.format(np.sqrt(cost.eval(feed_dict = {\n",
+    "          feature_data : predictors[trainsize:].values,\n",
+    "          target_data : targets[trainsize:].values.reshape(testsize, noutputs)\n",
+    "      }) / testsize))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
